--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,17 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   http: ^1.6.0
+  path_provider: ^2.1.5
   shared_preferences: ^2.5.3
 
 dev_dependencies:
-  build_runner: ^2.10.4
+  build_runner: ^2.4.13
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
